--- a/config/lio_sam_ouster.yaml
+++ b/config/lio_sam_ouster.yaml
@@ -1,13 +1,13 @@
 /**:
   ros__parameters:
     # Topics
-    pointCloudTopic: "points_raw"               # Point cloud data
-    imuTopic: "imu_raw"                         # IMU data
+    pointCloudTopic: "ouster_points"               # Point cloud data
+    imuTopic: "ouster_imu"                         # IMU data
     odomTopic: "odometry/imu"                   # IMU pre-preintegration odometry, same frequency as IMU
     gpsTopic: "odometry/gpsz"                   # GPS odometry topic from navsat, see module_navsat.launch file
 
     # Frames
-    lidarFrame: "base_link"
+    lidarFrame: "lidar_sensor_frame"
     baselinkFrame: "base_link"
     odometryFrame: "odom"
     mapFrame: "map"
@@ -25,20 +25,20 @@
     # Sensor Settings
     sensor: ouster                            # lidar sensor type, 'velodyne' or 'ouster' or 'livox' or 'robosense'
     N_SCAN: 32                                  # number of lidar channel (i.e., Velodyne/Ouster: 16, 32, 64, 128, Livox Horizon: 6)
-    Horizon_SCAN: 1024                          # lidar horizontal resolution (Velodyne:1800, Ouster:512,1024,2048, Livox Horizon: 4000)
+    Horizon_SCAN: 512                         # lidar horizontal resolution (Velodyne:1800, Ouster:512,1024,2048, Livox Horizon: 4000)
     downsampleRate: 2                           # default: 1. Downsample your data if too many points(line). i.e., 16 = 64 / 4, 16 = 16 / 1
     point_filter_num: 5                         # default: 3. Downsample your data if too many points(point). e.g., 16: 1, 32: 5, 64: 8
-    lidarMinRange: 0.4                          # default: 1.0, minimum lidar range to be used
+    lidarMinRange: 0.1                          # default: 1.0, minimum lidar range to be used
     lidarMaxRange: 60.0                       # default: 1000.0, maximum lidar range to be used
 
     # IMU Settings
     imuType: 0                                  # 0: 6-axis  1: 9-axis
-    imuRate: 100.0
-    imuAccNoise: 3.9939570888238808e-03
-    imuGyrNoise: 1.5636343949698187e-03
-    imuAccBiasN: 6.4356659353532566e-05
-    imuGyrBiasN: 3.5640318696367613e-05
-    imuGravity: 9.80511
+    imuRate: 500.0
+    imuAccNoise: 2.0e-03
+    imuGyrNoise: 1.0e-03
+    imuAccBiasN: 5.0e-05
+    imuGyrBiasN: 2.5e-05
+    imuGravity: 9.75
     imuRPYWeight: 0.01
 
     # Extrinsics: T_lb (lidar -> imu)
