--- a/config/lio_sam_ouster.yaml
+++ b/config/lio_sam_ouster.yaml
@@ -24,7 +24,7 @@
 
     # Sensor Settings
     sensor: ouster                            # lidar sensor type, 'velodyne' or 'ouster' or 'livox' or 'robosense'
-    N_SCAN: 16                                  # number of lidar channel (i.e., Velodyne/Ouster: 16, 32, 64, 128, Livox Horizon: 6)
+    N_SCAN: 32                                  # number of lidar channel (i.e., Velodyne/Ouster: 16, 32, 64, 128, Livox Horizon: 6)
     Horizon_SCAN: 512                         # lidar horizontal resolution (Velodyne:1800, Ouster:512,1024,2048, Livox Horizon: 4000)
     downsampleRate: 1                           # default: 1. Downsample your data if too many points(line). i.e., 16 = 64 / 4, 16 = 16 / 1
     point_filter_num: 3                         # default: 3. Downsample your data if too many points(point). e.g., 16: 1, 32: 5, 64: 8
@@ -35,7 +35,7 @@
     imuType: 0                                  # 0: 6-axis  1: 9-axis
     imuRate: 500.0
     imuAccNoise: 9.937769e-03
-    imuGyrNoise: 9.107188e-03
+    imuGyrNoise: 9.107188e-03        #liorf is very sensitive to this
     imuAccBiasN: 4.968884e-06
     imuGyrBiasN: 5.535941e-07
     imuGravity: 9.794418
